--- a/index.html
+++ b/index.html
@@ -1,20 +1,49 @@
 <html lang="dk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Prøve eksamen - AspIT, Fokuserede Talent Til Erhverslivet">
-    <title>AspIT - Fokuserede Talent til Erhverslivet </title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="description"
+      content="Prøve eksamen - AspIT, Fokuserede Talent Til Erhverslivet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>AspIT - Fokuserede Talent til Erhverslivet</title>
+  </head>
+  <body>
     <header class="header">
+      <div class="header__center">
         <h1 class="header__headline">
-            AspIT / Fokuserede talent til erhverslivet
+          <span class="heading-primary--main u-margin-buttom-small"
+            >AspIT / Fokuserede talent til erhverslivet</span
+          >
+          <span class="heading-primary--sub"
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum,
+            distinctio asperiores ut esse saepe.</span
+          >
         </h1>
-        <p class="header__text">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi officia doloribus pariatur animi libero a ipsum, odit laboriosam cupiditate neque mollitia! Temporibus ratione sapiente a corporis delectus nisi velit sed.
-        </p>
-        <a href="#" class="btn btn--white btn-animated">Kontakt os</a>
+        <a href="#" class="btn btn--green btn-animated">Kontakt os</a>
+      </div>
     </header>
-</body>
+    <main class="main">
+      <section class="section__about">
+        <div class="section__main-textbox">
+          <h2 class="heading-secoundary--main u-margin-buttom-small u-margin-top-medium">
+            Om AspIT
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-3 u-margin-buttom-small">
+            col 1 of 3
+          </div>
+          <div class="col-1-of-3 u-margin-buttom-small">
+            col 1 of 3
+          </div> 
+          <div class="col-1-of-3 u-margin-buttom-small">
+            col 1 of 3
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
