working on the secound section

--- a/index.html
+++ b/index.html
@@ -28,20 +28,105 @@
     <main class="main">
       <section class="section__about">
         <div class="section__main-textbox">
-          <h2 class="heading-secoundary--main u-margin-buttom-small u-margin-top-medium">
+          <h2
+            class="heading-secoundary--main u-margin-buttom-small u-margin-top-medium u-heading-center"
+          >
             Om AspIT
           </h2>
         </div>
         <div class="row">
           <div class="col-1-of-3 u-margin-buttom-small">
-            col 1 of 3
+            <img
+              class="cards__photo"
+              src="css/img/afklaring.jpg"
+              alt="Billede af afklarings elev"
+            />
+            <h3
+              class="heading-tetriary--main cards__heading u-margin-top-small u-margin-buttom-small"
+            >
+              Afklaring
+            </h3>
+            <p class="paragraph cards__paragragph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae
+              nunc sed velit dignissim. Morbi tristique senectus et netus et
+              malesuada fames. Tempor orci dapibus ultrices in iaculis nunc sed
+              augue. Pellentesque pulvinar pellentesque habitant morbi tristique
+              senectus et netus et. Mi quis hendrerit dolor magna eget est.
+              Metus dictum at tempor commodo ullamcorper a lacus. Facilisi etiam
+              dignissim diam quis enim lobortis scelerisque fermentum. Tortor
+              pretium viverra suspendisse potenti nullam ac tortor vitae purus.
+              Sed risus ultricies tristique nulla aliquet enim tortor at.
+            </p>
+
+            <a href="#" class="btn btn--transperant btn-animated">Se mere >></a>
           </div>
           <div class="col-1-of-3 u-margin-buttom-small">
-            col 1 of 3
-          </div> 
-          <div class="col-1-of-3 u-margin-buttom-small">
-            col 1 of 3
+            <img
+              class="cards__photo"
+              src="css/img/undervisning.jpg"
+              alt="Billede af afklarings elev"
+            />
+            <h3
+              class="heading-tetriary--main cards__heading u-margin-top-small u-margin-buttom-small"
+            >
+              Uddanelse
+            </h3>
+            <p class="paragraph cards__paragragph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae
+              nunc sed velit dignissim. Morbi tristique senectus et netus et
+              malesuada fames. Tempor orci dapibus ultrices in iaculis nunc sed
+              augue. Pellentesque pulvinar pellentesque habitant morbi tristique
+              senectus et netus et. Mi quis hendrerit dolor magna eget est.
+              Metus dictum at tempor commodo ullamcorper a lacus. Facilisi etiam
+              dignissim diam quis enim lobortis scelerisque fermentum. Tortor
+              pretium viverra suspendisse potenti nullam ac tortor vitae purus.
+              Sed risus ultricies tristique nulla aliquet enim tortor at.
+            </p>
+
+            <a href="#" class="btn btn--transperant btn-animated">Se mere >></a>
           </div>
+          <div class="col-1-of-3 u-margin-buttom-small">
+            <img
+              class="cards__photo"
+              src="css/img/arbejde.jpg"
+              alt="Billede af afklarings elev"
+            />
+            <h3
+              class="heading-tetriary--main cards__heading u-margin-top-small u-margin-buttom-small"
+            >
+              Praktik
+            </h3>
+            <p class="paragraph cards__paragragph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae
+              nunc sed velit dignissim. Morbi tristique senectus et netus et
+              malesuada fames. Tempor orci dapibus ultrices in iaculis nunc sed
+              augue. Pellentesque pulvinar pellentesque habitant morbi tristique
+              senectus et netus et. Mi quis hendrerit dolor magna eget est.
+              Metus dictum at tempor commodo ullamcorper a lacus. Facilisi etiam
+              dignissim diam quis enim lobortis scelerisque fermentum. Tortor
+              pretium viverra suspendisse potenti nullam ac tortor vitae purus.
+              Sed risus ultricies tristique nulla aliquet enim tortor at.
+            </p>
+
+            <a href="#" class="btn btn--transperant btn-animated">Se mere >></a>
+          </div>
+        </div>
+      </section>
+      <section class="citatbox__background">
+        <div class="citatbox--centering">
+          <div class="paragraph citatbox__paragraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
+            perferendis voluptatibus nesciunt, in molestias omnis at veritatis
+            aliquam consectetur sapiente esse ducimus? Magnam optio eveniet nam
+            laudantium velit nihil perspiciatis!
+          </div>
+          <h4 class="heading-quad--main citatbox__heading">
+              Ole Bay Jensen, Uddannelsesboss
+          </h4>
+          <img src="css/img/ole_bay_jensen.jpg" alt="Billede af Ole Bay Jensen" class="citatbox__photo">
         </div>
       </section>
     </main>
