--- a/index.html
+++ b/index.html
@@ -117,16 +117,77 @@
       </section>
       <section class="citatbox__background">
         <div class="citatbox--centering">
-          <div class="paragraph citatbox__paragraph">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
-            perferendis voluptatibus nesciunt, in molestias omnis at veritatis
-            aliquam consectetur sapiente esse ducimus? Magnam optio eveniet nam
-            laudantium velit nihil perspiciatis!
+          <div class="row">
+            <div class="col-1-of-2">
+              <div class="citatbox__textCentering u-margin-top-medium">
+                <div class="paragraph citatbox__paragraph">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
+                  perferendis voluptatibus nesciunt, in molestias omnis at
+                  veritatis.
+                </div>
+                <h4
+                  class="heading-quad--main citatbox__heading u-margin-top-small"
+                >
+                  Ole Bay Jensen, Uddannelseschef
+                </h4>
+              </div>
+            </div>
+            <div class="col-1-of-2">
+              <div class="citatbox__photo ">
+                <img
+                  src="css/img/ole_bay_jensen.jpg"
+                  alt="Billede af Ole Bay Jensen"
+                  class="citatbox__photo--maniplulation "
+                />
+              </div>
+            </div>
           </div>
-          <h4 class="heading-quad--main citatbox__heading">
-              Ole Bay Jensen, Uddannelsesboss
-          </h4>
-          <img src="css/img/ole_bay_jensen.jpg" alt="Billede af Ole Bay Jensen" class="citatbox__photo">
+        </div>
+      </section>
+      <section class="nyheder">
+        <h2
+          class="heading-secoundary--main u-margin-buttom-small u-margin-top-medium u-heading-center"
+        >
+          Nyheder
+        </h2>
+        <div class="row">
+          <div class="col-2-of-3">
+            <div class="row">
+              <div class="col-1-of-4">
+                <div class="nyheder__size">
+                  <img
+                    src="/css/img/nyheder/cowi.png"
+                    alt="billede af oplægsholder" class="nyheder__photo"
+                  />
+                
+                <a
+                  href="#"
+                  class="nyheder__heading heading-tetriary--main"
+                  >Samfundsøkonomisk analyse af AspIT</a
+                >
+                </div>
+              </div>
+              <div class="col-1-of-4">
+                col 1 of 4
+              </div>
+              <div class="col-1-of-4">
+                col 1 of 4
+              </div>
+              <div class="col-1-of-4">
+                col 1 of 4
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="row">
+              <div class="col-1-of-2">
+                col 1 of 2
+              </div>
+              <div class="col-1-of-2">
+                col 1 of 2
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
